@@ -125,6 +125,14 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.5.1</version>
         </plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.18.1</version>
+					<configuration>
+						<argLine>${argLine} -Xmx1024m -XX:MaxPermSize=512m</argLine>
+					</configuration>
+				</plugin>
       </plugins>
     </pluginManagement>
   </build>
